<resources>
    <string name="app_name">Moqaida</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="countries_array">
        <item>Other country</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Polynesia</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macao</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Republic of the Congo</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Barthelemy</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>U.S. Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="hello">Hello</string>
    <string name="hello_login_massage">Let’s get new items by bartering !</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="no_account_massage">Don’t Have Account?</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_SignUp_massage">Join us in Moqaida and get new items by
    bartering!</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_format">phone  e.g : (966) 548******</string>
    <string name="have_account_massage">Already Have Account?</string>
    <string name="user_registers_successfully">User Registers Successfully</string>
    <string name="user_logged_in_successfully">User Logged in Successfully</string>
    <string name="password_not_match">Password doesn\'t match</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password_massage">Your password should be at least 8 characters,contains 1 special character,small and capital characters</string>
    <string name="want_to_bartered">want to bartered !</string>
    <string name="Your_item_name">Your item name</string>
    <string name="describe_your_item">Describe your item here ...</string>
    <string name="used_for">Used for:</string>
    <string name="purchased_price">$ Purchased Price</string>
    <string name="estimated_price">$ Estimated Price</string>
    <string name="description">Description</string>
    <string name="profile">Profile</string>
    <string name="add_items">Add items</string>
    <string name="my_items">My items</string>
    <string name="bartering_request">Bartering Request</string>
    <string name="Logout">Logout</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="not_loggin_massage">oops,You aren\'t logged in</string>
    <string name="upload_photo">Upload image</string>
    <string name="Years_of_use">Years of use</string>
    <string name="location">Location</string>
    <string name="short_description">Short Description</string>
    <string name="save">save</string>
    <string name="item_name">Item Name</string>
    <string name="item_name_example">example: phone</string>
    <string name="image_upload_successfully">"Image upload successfully"</string>
    <string name="item_upload_successfully">"Item upload successfully"</string>
    <string name="no_image_massage">"No image to upload!!"</string>
    <string name="my_image">My image</string>
    <string name="used_for_option1">1 month or less</string>
    <string name="used_for_option2">1 year or less</string>
    <string name="used_for_option3">2 to 3 years</string>
    <string name="used_for_option4">4 to 5 years</string>
    <string name="used_for_option5">mor than 5 years</string>
    <string name="change_photo">Change Photo</string>
    <string name="item_update_successfully">update successfully</string>
    <string name="contact">Contact..</string>
    <string name="title_activity_second">secondActivity</string>
    <string name="massage_holder_example">Hi , I’m zainab ALjutayl ...  my laptob brand HP Pavilion Aero Laptop 13-be0007nx, 13.3", Windows 10 Home 64, AMD Ryzen™ 7, 16GB RAM, 512GB SSD, WUXGA, Pale rose gold, EN-AR KB - 4H580EA</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="required">Required</string>
    <string name="fill_required">please fill required</string>
    <string name="fill_correctly">please fill correctly</string>
    <string name="not_empty_massage">field should not be empty</string>
    <string name="send_request_successfully">your requests has been sent</string>
    <string name="login_to_barter">you have to login to be able to Barter</string>
    <string name="alert_delete_massage">Are you sure you want to delete your item?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="hi_iam">Hi , I’m</string>
</resources>